chip-power (0.6) unstable; urgency=low

  * axp209: fix calc error in axp209_2byte_register_value.
  * axp209: fix "--help" bug where "hash -t i2cget" fails.
  * axp209: enhance to print help when axp209 entered with no parameters.
  * axp209: fixed/enhanced heading comments.
  * axp209: updated "--version" to 1.2.1.

 -- Steve Ford <sford@geeky-boy.com>  Sun, 25 Sep 2016 08:43:38 -0500

chip-power (0.5) unstable; urgency=low

  * usage.txt fixes from combs

 -- Ben Young <software@nextthing.co>  Mon, 29 Aug 2016 12:52:31 -0800

chip-power (0.4) unstable; urgency=low

  * Fixed spelling error for no-limit service target

 -- Ben Young <software@nextthing.co>  Mon, 27 Jun 2016 17:17:31 -0800

chip-power (0.3) unstable; urgency=low

  * Adding no-limit service

 -- Ben Young <software@nextthing.co>  Mon, 27 Jun 2016 15:17:31 -0800

chip-power (0.2) unstable; urgency=low

  * View the IRQ Enable 3 and IRQ Status 3 (REG42H)

 -- Jose Torres <software@nextthing.co>  Tue, 15 Dec 2015 11:02:31 -0800

chip-power (0.1) unstable; urgency=low

  * Initial Release.

 -- Jose Torres <software@nextthing.co>  Fri, 04 Dec 2015 14:38:31 -0800

